--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,16 @@ jdk:
 
 script:
   - sbt ++$TRAVIS_SCALA_VERSION clean test
+
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt/boot/
+
+before_cache:
+  - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
+  - find $HOME/.sbt -name "*.lock" -delete
+
+notifications:
+  email:
+    - r.janusz@avsystem.com
