more cache dirs in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ script:
 cache:
   directories:
     - $HOME/.ivy2/cache
+    - $HOME/.coursier/cache
     - $HOME/.sbt/boot/
+    - $HOME/.sbt/launchers/
 
 before_cache:
   - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
