--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ cache:
   directories:
     - $HOME/.ivy2/cache
     - $HOME/.coursier/cache
-    - $HOME/.sbt/boot/
-    - $HOME/.sbt/launchers/
+    - $HOME/.sbt
+    - $HOME/.cache
 
 before_cache:
   - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
