Update github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
           java-version: 21
           cache: sbt
 
+      - name: Setup sbt
+        uses: sbt/setup-sbt@v1
+
       - name: Check that workflows are up to date
         run: sbt '++ ${{ matrix.scala }}' githubWorkflowCheck
 
@@ -55,7 +58,7 @@ jobs:
         run: sbt '++ ${{ matrix.scala }}' test
 
       - name: Compress target directories
-        run: tar cf targets.tar scex-macros/target scex-core/target scex-test/target scex-java-test/target scex-util/target target project/target
+        run: tar cf targets.tar scex-macros/target scex-core/target scex-test/target scex-util/target target project/target
 
       - name: Upload target directories
         uses: actions/upload-artifact@v4
@@ -94,6 +97,9 @@ jobs:
           distribution: temurin
           java-version: 21
           cache: sbt
+
+      - name: Setup sbt
+        uses: sbt/setup-sbt@v1
 
       - name: Download target directories (2.13.14)
         uses: actions/download-artifact@v4
