--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,29 +24,13 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.16]
-        java: [temurin@17, temurin@21, temurin@25]
+        java: [temurin@25, zulu@25, corretto@25, openjdk@25]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-
-      - name: Setup Java (temurin@17)
-        if: matrix.java == 'temurin@17'
-        uses: actions/setup-java@v5
-        with:
-          distribution: temurin
-          java-version: 17
-          cache: sbt
-
-      - name: Setup Java (temurin@21)
-        if: matrix.java == 'temurin@21'
-        uses: actions/setup-java@v5
-        with:
-          distribution: temurin
-          java-version: 21
-          cache: sbt
 
       - name: Setup Java (temurin@25)
         if: matrix.java == 'temurin@25'
@@ -56,11 +40,35 @@ jobs:
           java-version: 25
           cache: sbt
 
+      - name: Setup Java (zulu@25)
+        if: matrix.java == 'zulu@25'
+        uses: actions/setup-java@v5
+        with:
+          distribution: zulu
+          java-version: 25
+          cache: sbt
+
+      - name: Setup Java (corretto@25)
+        if: matrix.java == 'corretto@25'
+        uses: actions/setup-java@v5
+        with:
+          distribution: corretto
+          java-version: 25
+          cache: sbt
+
+      - name: Setup Java (openjdk@25)
+        if: matrix.java == 'openjdk@25'
+        uses: actions/setup-java@v5
+        with:
+          distribution: openjdk
+          java-version: 25
+          cache: sbt
+
       - name: Setup sbt
         uses: sbt/setup-sbt@v1
 
-      - name: Check that workflows are up to date
-        run: sbt '++ ${{ matrix.scala }}' githubWorkflowCheck
+#      - name: Check that workflows are up to date
+#        run: sbt '++ ${{ matrix.scala }}' githubWorkflowCheck
 
       - name: Build project
         run: sbt '++ ${{ matrix.scala }}' test
@@ -82,7 +90,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.16]
-        java: [temurin@17]
+        java: [temurin@25]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -90,27 +98,27 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Java (temurin@17)
-        if: matrix.java == 'temurin@17'
-        uses: actions/setup-java@v5
-        with:
-          distribution: temurin
-          java-version: 17
-          cache: sbt
-
-      - name: Setup Java (temurin@21)
-        if: matrix.java == 'temurin@21'
-        uses: actions/setup-java@v5
-        with:
-          distribution: temurin
-          java-version: 21
-          cache: sbt
-
       - name: Setup Java (temurin@25)
         if: matrix.java == 'temurin@25'
         uses: actions/setup-java@v5
         with:
           distribution: temurin
+          java-version: 25
+          cache: sbt
+
+      - name: Setup Java (zulu@25)
+        if: matrix.java == 'zulu@25'
+        uses: actions/setup-java@v5
+        with:
+          distribution: zulu
+          java-version: 25
+          cache: sbt
+
+      - name: Setup Java (corretto@25)
+        if: matrix.java == 'corretto@25'
+        uses: actions/setup-java@v5
+        with:
+          distribution: corretto
           java-version: 25
           cache: sbt
 
