--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.16]
-        java: [temurin@25, zulu@25, corretto@25, openjdk@25]
+        java: [temurin@25, zulu@25, corretto@25]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -56,19 +56,11 @@ jobs:
           java-version: 25
           cache: sbt
 
-      - name: Setup Java (openjdk@25)
-        if: matrix.java == 'openjdk@25'
-        uses: actions/setup-java@v5
-        with:
-          distribution: openjdk
-          java-version: 25
-          cache: sbt
-
       - name: Setup sbt
         uses: sbt/setup-sbt@v1
 
-#      - name: Check that workflows are up to date
-#        run: sbt '++ ${{ matrix.scala }}' githubWorkflowCheck
+      - name: Check that workflows are up to date
+        run: sbt '++ ${{ matrix.scala }}' githubWorkflowCheck
 
       - name: Build project
         run: sbt '++ ${{ matrix.scala }}' test
