--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.16]
-        java: [temurin@25, zulu@25, corretto@25]
+        java: [temurin@17, temurin@21, temurin@25]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -32,27 +32,27 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Java (temurin@17)
+        if: matrix.java == 'temurin@17'
+        uses: actions/setup-java@v5
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: sbt
+
+      - name: Setup Java (temurin@21)
+        if: matrix.java == 'temurin@21'
+        uses: actions/setup-java@v5
+        with:
+          distribution: temurin
+          java-version: 21
+          cache: sbt
+
       - name: Setup Java (temurin@25)
         if: matrix.java == 'temurin@25'
         uses: actions/setup-java@v5
         with:
           distribution: temurin
-          java-version: 25
-          cache: sbt
-
-      - name: Setup Java (zulu@25)
-        if: matrix.java == 'zulu@25'
-        uses: actions/setup-java@v5
-        with:
-          distribution: zulu
-          java-version: 25
-          cache: sbt
-
-      - name: Setup Java (corretto@25)
-        if: matrix.java == 'corretto@25'
-        uses: actions/setup-java@v5
-        with:
-          distribution: corretto
           java-version: 25
           cache: sbt
 
@@ -82,7 +82,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.16]
-        java: [temurin@25]
+        java: [temurin@17]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -90,27 +90,27 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Java (temurin@17)
+        if: matrix.java == 'temurin@17'
+        uses: actions/setup-java@v5
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: sbt
+
+      - name: Setup Java (temurin@21)
+        if: matrix.java == 'temurin@21'
+        uses: actions/setup-java@v5
+        with:
+          distribution: temurin
+          java-version: 21
+          cache: sbt
+
       - name: Setup Java (temurin@25)
         if: matrix.java == 'temurin@25'
         uses: actions/setup-java@v5
         with:
           distribution: temurin
-          java-version: 25
-          cache: sbt
-
-      - name: Setup Java (zulu@25)
-        if: matrix.java == 'zulu@25'
-        uses: actions/setup-java@v5
-        with:
-          distribution: zulu
-          java-version: 25
-          cache: sbt
-
-      - name: Setup Java (corretto@25)
-        if: matrix.java == 'corretto@25'
-        uses: actions/setup-java@v5
-        with:
-          distribution: corretto
           java-version: 25
           cache: sbt
 
